Немного "фикса" от меня

--- a/Resources/Maps/Corvax/Shuttles/BlackMarket/menace.yml
+++ b/Resources/Maps/Corvax/Shuttles/BlackMarket/menace.yml
@@ -268,25 +268,30 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 7.5,-0.5
       parent: 1
-- proto: AtmosDeviceFanTiny
+- proto: AtmosDeviceFanDirectional
   entities:
-  - uid: 7
+  - uid: 4
     components:
     - type: Transform
       pos: 6.5,-3.5
       parent: 1
-  - uid: 24
+  - uid: 7
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: 4.5,3.5
+      parent: 1
+  - uid: 24
+    components:
+    - type: Transform
+      pos: 5.5,-3.5
       parent: 1
   - uid: 151
     components:
     - type: Transform
       pos: 0.5,-3.5
       parent: 1
-  - uid: 163
+  - uid: 242
     components:
     - type: Transform
       pos: -0.5,-3.5
@@ -818,6 +823,14 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -0.5,0.5
       parent: 1
+- proto: DefibrillatorCabinetFilled
+  entities:
+  - uid: 89
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -1.5,-2.5
+      parent: 1
 - proto: DogBed
   entities:
   - uid: 144
@@ -1079,6 +1092,13 @@ entities:
       rot: 3.141592653589793 rad
       pos: 3.5,-2.5
       parent: 1
+- proto: LockerWallMaterialsFuelPlasmaFilled
+  entities:
+  - uid: 77
+    components:
+    - type: Transform
+      pos: 6.5,2.5
+      parent: 1
 - proto: NetworkConfigurator
   entities:
   - uid: 182
@@ -1125,7 +1145,7 @@ entities:
       parent: 1
 - proto: PlasticFlapsAirtightClear
   entities:
-  - uid: 4
+  - uid: 163
     components:
     - type: Transform
       pos: 5.5,-3.5
@@ -1144,6 +1164,8 @@ entities:
       parent: 1
     - type: FuelGenerator
       on: False
+    - type: MaterialStorageMagnetPickup
+      magnetEnabled: True
     - type: Physics
       bodyType: Static
 - proto: Poweredlight
@@ -1333,13 +1355,6 @@ entities:
     - type: Transform
       pos: 3.160936,4.206492
       parent: 1
-- proto: SheetPlasma
-  entities:
-  - uid: 146
-    components:
-    - type: Transform
-      pos: 6.544826,1.53125
-      parent: 1
 - proto: ShuttersNormalOpen
   entities:
   - uid: 3
@@ -1365,16 +1380,12 @@ entities:
       rot: 3.141592653589793 rad
       pos: -0.5,4.5
       parent: 1
-    missingComponents:
-    - Anchorable
   - uid: 222
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 2.5,4.5
       parent: 1
-    missingComponents:
-    - Anchorable
 - proto: SignalButtonDirectional
   entities:
   - uid: 26
@@ -1432,14 +1443,6 @@ entities:
         222:
         - Pressed: Toggle
         - Pressed: Trigger
-- proto: SignSpace
-  entities:
-  - uid: 77
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 6.5,2.5
-      parent: 1
 - proto: SpawnPointPirate
   entities:
   - uid: 93
