--- a/Resources/Maps/Corvax/Shuttles/Expedition/ZaryaAssault.yml
+++ b/Resources/Maps/Corvax/Shuttles/Expedition/ZaryaAssault.yml
@@ -12806,7 +12806,7 @@ entities:
     - type: Physics
       canCollide: False
     - type: InsideEntityStorage
-- proto: WeaponSVT
+- proto: WeaponRifleSVT
   entities:
   - uid: 1667
     components:
