--- a/Resources/Prototypes/_NF/Shipyard/bodkin.yml
+++ b/Resources/Prototypes/_NF/Shipyard/bodkin.yml
@@ -10,8 +10,8 @@
 #
 - type: vessel
   id: Bodkin
-  name: SBB Bodkin
-  description: The smaller sibling to the Broadhead, the SBB Bodkin is designed for rockhopping and salvage recovery.
+  name: SBB Бодкин
+  description: Среднегабаритный грузовой шаттл. Рекомендованный размер команды 1-4 человек.
   price: 39000 #Grid appraises at 35693. Slapped on a ~10% markup.
   category: Medium
   group: Shipyard
@@ -21,7 +21,7 @@
 
 - type: gameMap
   id: Bodkin
-  mapName: 'SBB Bodkin'
+  mapName: 'SBB Бодкин'
   mapPath: /Maps/_NF/Shuttles/bodkin.yml
   minPlayers: 0
   stations:
@@ -29,7 +29,7 @@
       stationProto: StandardFrontierVessel
       components:
         - type: StationNameSetup
-          mapNameTemplate: 'Bodkin {1}'
+          mapNameTemplate: 'Бодкин {1}'
           nameGenerator:
             !type:NanotrasenNameGenerator
             prefixCreator: '14'
