--- a/Resources/Prototypes/_NF/Shipyard/tyne.yml
+++ b/Resources/Prototypes/_NF/Shipyard/tyne.yml
@@ -10,8 +10,8 @@
 #
 - type: vessel
   id: Tyne
-  name: SBB Tyne
-  description: A small, agile lifeboat with an exterior deck and survivor cabin for search and rescue operations. 
+  name: SBB Тайна
+  description: Небольшой шаттл с внешней палубой и каютой для выживших, предназначенная для поисково-спасательных операций.
   price: 18500 #~5% markup as it's a med ship. Grid values at 17372.
   category: Small
   group: Shipyard
