--- a/Resources/Maps/Corvax/Shuttles/Science/lyrae.yml
+++ b/Resources/Maps/Corvax/Shuttles/Science/lyrae.yml
@@ -2383,6 +2383,8 @@ entities:
       pos: -2.5,1.5
       parent: 2
     - type: DeviceNetwork
+      configurators:
+      - invalid
       deviceLists:
       - 63
   - uid: 625
@@ -2400,6 +2402,8 @@ entities:
       pos: -9.5,-1.5
       parent: 2
     - type: DeviceNetwork
+      configurators:
+      - invalid
       deviceLists:
       - 63
   - uid: 630
@@ -2408,6 +2412,8 @@ entities:
       pos: -2.5,4.5
       parent: 2
     - type: DeviceNetwork
+      configurators:
+      - invalid
       deviceLists:
       - 63
 - proto: GasMixerOn
@@ -3182,6 +3188,8 @@ entities:
       pos: -2.5,5.5
       parent: 2
     - type: DeviceNetwork
+      configurators:
+      - invalid
       deviceLists:
       - 63
     - type: AtmosPipeColor
@@ -3192,6 +3200,8 @@ entities:
       pos: -4.5,-0.5
       parent: 2
     - type: DeviceNetwork
+      configurators:
+      - invalid
       deviceLists:
       - 63
     - type: AtmosPipeColor
@@ -3213,6 +3223,8 @@ entities:
       pos: -8.5,-2.5
       parent: 2
     - type: DeviceNetwork
+      configurators:
+      - invalid
       deviceLists:
       - 63
     - type: AtmosPipeColor
@@ -3234,6 +3246,8 @@ entities:
       pos: -2.5,2.5
       parent: 2
     - type: DeviceNetwork
+      configurators:
+      - invalid
       deviceLists:
       - 63
     - type: AtmosPipeColor
@@ -3244,6 +3258,8 @@ entities:
       pos: -7.5,3.5
       parent: 2
     - type: DeviceNetwork
+      configurators:
+      - invalid
       deviceLists:
       - 63
     - type: AtmosPipeColor
@@ -3311,6 +3327,8 @@ entities:
       pos: -1.5,-0.5
       parent: 2
     - type: DeviceNetwork
+      configurators:
+      - invalid
       deviceLists:
       - 63
     - type: AtmosPipeColor
@@ -3343,6 +3361,8 @@ entities:
       pos: -9.5,-2.5
       parent: 2
     - type: DeviceNetwork
+      configurators:
+      - invalid
       deviceLists:
       - 63
     - type: AtmosPipeColor
@@ -3354,6 +3374,8 @@ entities:
       pos: -3.5,6.5
       parent: 2
     - type: DeviceNetwork
+      configurators:
+      - invalid
       deviceLists:
       - 63
     - type: AtmosPipeColor
@@ -3365,6 +3387,8 @@ entities:
       pos: -3.5,3.5
       parent: 2
     - type: DeviceNetwork
+      configurators:
+      - invalid
       deviceLists:
       - 63
     - type: AtmosPipeColor
@@ -3375,6 +3399,8 @@ entities:
       pos: -8.5,3.5
       parent: 2
     - type: DeviceNetwork
+      configurators:
+      - invalid
       deviceLists:
       - 63
     - type: AtmosPipeColor
