--- a/Resources/Prototypes/_NF/PointsOfInterest/grifty.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/grifty.yml
@@ -24,7 +24,7 @@
   minPlayers: 0
   stations:
     Grifty:
-      stationProto: DeadDropShipyardFrontierOutpost
+      stationProto: DeadDropFrontierOutpost
       components:
         - type: StationNameSetup
           mapNameTemplate: "Grifty's Gas n Grub"
