--- a/Resources/Prototypes/_NF/PointsOfInterest/mchobo.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/mchobo.yml
@@ -25,7 +25,7 @@
   minPlayers: 0
   stations:
     McHobo:
-      stationProto: DeadDropShipyardFrontierOutpost
+      stationProto: DeadDropFrontierOutpost
       components:
         - type: StationNameSetup
           mapNameTemplate: "Derelict McCargo"
