--- a/Resources/Prototypes/_NF/PointsOfInterest/lpbravo.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/lpbravo.yml
@@ -26,6 +26,7 @@
   minPlayers: 0
   stations:
     LPBravo:
+      # FIXME: no records despite shipyard console, could currently be gamed
       stationProto: StandardFrontierOutpost
       components:
         - type: StationNameSetup
