--- a/Resources/Prototypes/_NF/PointsOfInterest/cove.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/cove.yml
@@ -26,7 +26,7 @@
   minPlayers: 0
   stations:
     Cove:
-      stationProto: SpawnableFrontierOutpost
+      stationProto: RecordsFrontierOutpost
       components:
         - type: StationNameSetup
           mapNameTemplate: 'Pirate Cove'
