--- a/Resources/Prototypes/_NF/World/Biomes/basic.yml
+++ b/Resources/Prototypes/_NF/World/Biomes/basic.yml
@@ -56,73 +56,74 @@
         # - id: NFAsteroidChromiteDebrisEnormous
         # - id: NFAsteroidRockDebrisEnormous
         # Extra Enormous
-        - id: NFAsteroidDebrisExtraEnormous
-        - id: NFAsteroidIceDebrisExtraEnormous
-        - id: NFAsteroidAndesiteDebrisExtraEnormous
-        - id: NFAsteroidBasaltDebrisExtraEnormous
-        - id: NFAsteroidSandDebrisExtraEnormous
-        - id: NFAsteroidChromiteDebrisExtraEnormous
-        - id: NFAsteroidRockDebrisExtraEnormous
-        # Massive
-        - id: NFAsteroidDebrisMassive
-          prob: 0.6
-        - id: NFAsteroidIceDebrisMassive
-          prob: 0.6
-        - id: NFAsteroidAndesiteDebrisMassive
-          prob: 0.6
-        - id: NFAsteroidBasaltDebrisMassive
-          prob: 0.6
-        - id: NFAsteroidSandDebrisMassive
-          prob: 0.6
-        - id: NFAsteroidChromiteDebrisMassive
-          prob: 0.6
-        - id: NFAsteroidRockDebrisMassive
-          prob: 0.6
-        # Extra Massive
-        - id: NFAsteroidDebrisExtraMassive
-          prob: 0.3
-        - id: NFAsteroidIceDebrisExtraMassive
-          prob: 0.3
-        - id: NFAsteroidAndesiteDebrisExtraMassive
-          prob: 0.3
-        - id: NFAsteroidBasaltDebrisExtraMassive
-          prob: 0.3
-        - id: NFAsteroidSandDebrisExtraMassive
-          prob: 0.3
-        - id: NFAsteroidChromiteDebrisExtraMassive
-          prob: 0.3
-        - id: NFAsteroidRockDebrisExtraMassive
-          prob: 0.3
-        # Gigantic
-        - id: NFAsteroidDebrisGigantic
-          prob: 0.15
-        - id: NFAsteroidIceDebrisGigantic
-          prob: 0.15
-        - id: NFAsteroidAndesiteDebrisGigantic
-          prob: 0.15
-        - id: NFAsteroidBasaltDebrisGigantic
-          prob: 0.15
-        - id: NFAsteroidSandDebrisGigantic
-          prob: 0.15
-        - id: NFAsteroidChromiteDebrisGigantic
-          prob: 0.15
-        - id: NFAsteroidRockDebrisGigantic
-          prob: 0.15
-        # Extra Gigantic
-        - id: NFAsteroidDebrisExtraGigantic
-          prob: 0.08
-        - id: NFAsteroidIceDebrisExtraGigantic
-          prob: 0.08
-        - id: NFAsteroidAndesiteDebrisExtraGigantic
-          prob: 0.08
-        - id: NFAsteroidBasaltDebrisExtraGigantic
-          prob: 0.08
-        - id: NFAsteroidSandDebrisExtraGigantic
-          prob: 0.08
-        - id: NFAsteroidChromiteDebrisExtraGigantic
-          prob: 0.08
-        - id: NFAsteroidRockDebrisExtraGigantic
-          prob: 0.08
+        - id: NFAsteroidDungeons
+        # - id: NFAsteroidDebrisExtraEnormous
+        # - id: NFAsteroidIceDebrisExtraEnormous
+        # - id: NFAsteroidAndesiteDebrisExtraEnormous
+        # - id: NFAsteroidBasaltDebrisExtraEnormous
+        # - id: NFAsteroidSandDebrisExtraEnormous
+        # - id: NFAsteroidChromiteDebrisExtraEnormous
+        # - id: NFAsteroidRockDebrisExtraEnormous
+        # # Massive
+        # - id: NFAsteroidDebrisMassive
+          # prob: 0.6
+        # - id: NFAsteroidIceDebrisMassive
+          # prob: 0.6
+        # - id: NFAsteroidAndesiteDebrisMassive
+          # prob: 0.6
+        # - id: NFAsteroidBasaltDebrisMassive
+          # prob: 0.6
+        # - id: NFAsteroidSandDebrisMassive
+          # prob: 0.6
+        # - id: NFAsteroidChromiteDebrisMassive
+          # prob: 0.6
+        # - id: NFAsteroidRockDebrisMassive
+          # prob: 0.6
+        # # Extra Massive
+        # - id: NFAsteroidDebrisExtraMassive
+          # prob: 0.3
+        # - id: NFAsteroidIceDebrisExtraMassive
+          # prob: 0.3
+        # - id: NFAsteroidAndesiteDebrisExtraMassive
+          # prob: 0.3
+        # - id: NFAsteroidBasaltDebrisExtraMassive
+          # prob: 0.3
+        # - id: NFAsteroidSandDebrisExtraMassive
+          # prob: 0.3
+        # - id: NFAsteroidChromiteDebrisExtraMassive
+          # prob: 0.3
+        # - id: NFAsteroidRockDebrisExtraMassive
+          # prob: 0.3
+        # # Gigantic
+        # - id: NFAsteroidDebrisGigantic
+          # prob: 0.15
+        # - id: NFAsteroidIceDebrisGigantic
+          # prob: 0.15
+        # - id: NFAsteroidAndesiteDebrisGigantic
+          # prob: 0.15
+        # - id: NFAsteroidBasaltDebrisGigantic
+          # prob: 0.15
+        # - id: NFAsteroidSandDebrisGigantic
+          # prob: 0.15
+        # - id: NFAsteroidChromiteDebrisGigantic
+          # prob: 0.15
+        # - id: NFAsteroidRockDebrisGigantic
+          # prob: 0.15
+        # # Extra Gigantic
+        # - id: NFAsteroidDebrisExtraGigantic
+          # prob: 0.08
+        # - id: NFAsteroidIceDebrisExtraGigantic
+          # prob: 0.08
+        # - id: NFAsteroidAndesiteDebrisExtraGigantic
+          # prob: 0.08
+        # - id: NFAsteroidBasaltDebrisExtraGigantic
+          # prob: 0.08
+        # - id: NFAsteroidSandDebrisExtraGigantic
+          # prob: 0.08
+        # - id: NFAsteroidChromiteDebrisExtraGigantic
+          # prob: 0.08
+        # - id: NFAsteroidRockDebrisExtraGigantic
+          # prob: 0.08
     - type: NoiseDrivenDebrisSelector
       noiseChannel: Wreck
       debrisTable:
