--- a/Resources/Prototypes/Corvax/Shipyard/Expedition/zaryaA.yml
+++ b/Resources/Prototypes/Corvax/Shipyard/Expedition/zaryaA.yml
@@ -5,6 +5,7 @@
   price: 157500 # 50% tax
   category: Large
   group: Expedition
+  mapchecker_group_override: Security
   shuttlePath: /Maps/Corvax/Shuttles/Expedition/ZaryaAssault.yml
 
 - type: gameMap
