--- a/Resources/Maps/Corvax/Shuttles/Expedition/ZaryaAssault.yml
+++ b/Resources/Maps/Corvax/Shuttles/Expedition/ZaryaAssault.yml
@@ -5914,10 +5914,6 @@ entities:
     - type: Transform
       pos: 11.548131,2.545815
       parent: 2
-    - type: ItemSlots
-    - type: ContainerContainer
-      containers:
-        paper_label: !type:ContainerSlot {}
 - proto: DrinkVodkaBottleFull
   entities:
   - uid: 975
@@ -6234,7 +6230,7 @@ entities:
       pos: -3.5,-8.5
       parent: 2
     - type: Door
-      secondsUntilStateChange: -21516.627
+      secondsUntilStateChange: -21609.893
       state: Closing
   - uid: 749
     components:
@@ -6255,7 +6251,7 @@ entities:
       pos: 4.5,-6.5
       parent: 2
     - type: Door
-      secondsUntilStateChange: -23018.635
+      secondsUntilStateChange: -23111.9
       state: Closing
   - uid: 752
     components:
@@ -9309,7 +9305,7 @@ entities:
     - type: Transform
       pos: -11.5,-6.5
       parent: 2
-- proto: RandomPosterContrabandDeadDrop
+- proto: RandomPosterContraband
   entities:
   - uid: 1780
     components:
@@ -9796,14 +9792,6 @@ entities:
     - type: Transform
       pos: -8.5,-8.5
       parent: 2
-- proto: SignMinerDock
-  entities:
-  - uid: 1140
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 2.5,-11.5
-      parent: 2
 - proto: SignSecure
   entities:
   - uid: 1142
@@ -9819,6 +9807,14 @@ entities:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 9.5,3.5
+      parent: 2
+- proto: SignShipDock
+  entities:
+  - uid: 1140
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 2.5,-11.5
       parent: 2
 - proto: SignSmoking
   entities:
@@ -12790,6 +12786,15 @@ entities:
     - type: Transform
       pos: -9.536149,8.404913
       parent: 2
+- proto: WeaponRifleSVT
+  entities:
+  - uid: 1667
+    components:
+    - type: Transform
+      parent: 987
+    - type: Physics
+      canCollide: False
+    - type: InsideEntityStorage
 - proto: WeaponShotgunKS23
   entities:
   - uid: 1798
@@ -12803,15 +12808,6 @@ entities:
     components:
     - type: Transform
       parent: 1745
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
-- proto: WeaponRifleSVT
-  entities:
-  - uid: 1667
-    components:
-    - type: Transform
-      parent: 987
     - type: Physics
       canCollide: False
     - type: InsideEntityStorage
