--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
@@ -130,7 +130,7 @@
         shader: unshaded
 
 - type: entity
-  id: NFWeaponEnergyPistolHoloflare
+  id: NFWeaponHoloflareGun
   parent: [ BaseC1Contraband, BaseWeaponBatterySmall ]
   name: holoflare pistol
   suffix: Frontier
