--- a/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/lesslethalvend.yml
+++ b/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/lesslethalvend.yml
@@ -6,6 +6,7 @@
     WeaponRevolverArgentiNonlethal: 10
     WeaponShotgunDoubleBarreledRubber: 10
     WeaponFlareGun: 20
+    NFWeaponHoloflareGun: 5
     BoxBeanbag: 8
     MagazineBoxRifleRubber: 8
     MagazineBoxCaselessRifleRubber: 10
@@ -30,6 +31,7 @@
     WeaponRevolverArgentiNonlethal: 4294967295 # Infinite
     WeaponShotgunDoubleBarreledRubber: 4294967295 # Infinite
     WeaponFlareGun: 4294967295 # Infinite
+    NFWeaponHoloflareGun: 4294967295 # Infinite
     BoxBeanbag: 4294967295 # Infinite
     MagazineBoxRifleRubber: 4294967295 # Infinite
     MagazineBoxCaselessRifleRubber: 4294967295 # Infinite
