--- a/Resources/Prototypes/Corvax/Shipyard/Expedition/zaryaA.yml
+++ b/Resources/Prototypes/Corvax/Shipyard/Expedition/zaryaA.yml
@@ -7,6 +7,9 @@
   group: Expedition
   mapchecker_group_override: Security
   shuttlePath: /Maps/Corvax/Shuttles/Expedition/ZaryaAssault.yml
+  guidebookPage: Null
+  class:
+  - Expedition
 
 - type: gameMap
   id: ZaryaА
