--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/misc.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/misc.yml
@@ -15,7 +15,7 @@
           !type:PhysShapeAabb
           bounds: "-0.1,-0.1,0.1,0.1"
         mask:
-          - BulletImpassable
+          - ItemMask # BulletImpassable
   - type: Sprite
     sprite: Objects/Weapons/Guns/Projectiles/magic.rsi
     state: magicm_cyan
@@ -24,10 +24,10 @@
     lifetime: 900
   - type: AmbientSound
     enabled: true
-    volume: 0
-    range: 7
+    volume: -15
+    range: 2
     sound:
-      path: /Audio/Items/Flare/flare_burn.ogg
+      path: /Audio/Ambience/Objects/light_hum.ogg
       params:
         loop: true
   - type: PointLight
