Cleanup, honey apple streusel pie, honeycomb png

--- a/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
@@ -28,7 +28,7 @@
 - type: microwaveMealRecipe
   id: RecipeAvocadoToast
   name: avocado toast recipe
-  result: FoodMealAvocadoToast
+  result: FoodBreadAvocadoToast
   time: 5
   solids:
     FoodBreadPlainSlice: 1
@@ -256,7 +256,7 @@
 
 - type: microwaveMealRecipe
   id: RecipeHoneyBun
-  name: honey and bun recipe
+  name: honey bun recipe
   result: FoodBakedBunHoney
   time: 5
   solids:
@@ -281,7 +281,7 @@
 
 - type: microwaveMealRecipe
   id: RecipeGlazedHam
-  name: honey and ham recipe
+  name: honey glazed ham recipe
   result: FoodGlazedHam
   time: 15
   solids:
@@ -294,8 +294,8 @@
 
 - type: microwaveMealRecipe
   id: RecipeAppleHoneyDutchBaby
-  name: honey and apple recipe
-  result: FoodAppleHoneyDutchBaby
+  name: honey apple streusel pie
+  result: FoodPieAppleHoney
   time: 15
   solids:
     FoodPlateTin: 1
@@ -303,6 +303,7 @@
     FoodApple: 2
   reagents:
     Honey: 10
+    Oats: 10
   recipeType:
   - Oven
 
