--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/Baked/misc.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/Baked/misc.yml
@@ -28,3 +28,35 @@
     color: "#FFFFCC"
     radius: 1.25
     energy: 0.75
+
+- type: entity
+  name: pear muffin
+  parent: FoodBakedBase
+  id: FoodBakedMuffinPear
+  description: I won't tell if you just try to pick out the chocolate.
+  components:
+  - type: FlavorProfile
+    flavors:
+      - chocolate
+      - muffin
+      - pear
+  - type: Sprite
+    sprite: _NF/Objects/Consumable/Food/Baked/bread.rsi
+    state: pearmuffin
+    scale: .75, .75
+  - type: SolutionContainerManager
+    solutions:
+      food:
+        maxVol: 15
+        reagents:
+        - ReagentId: Nutriment
+          Quantity: 6
+        - ReagentId: Vitamin
+          Quantity: 4
+        - ReagentId: Flavorol
+          Quantity: 2
+        - ReagentId: Theobromine
+          Quantity: 1
+  - type: Tag
+    tags:
+    - Fruit
