--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/ingredients.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/ingredients.yml
@@ -205,58 +205,11 @@
     node: dark roasted coffee
     defaultTarget: Null # Overwriting light target
 
-- type: reagent
-  id: OilVegetable
-  name: reagent-name-oil-vegetable
-  group: Foods
-  desc: reagent-desc-oil-vegetable
-  physicalDesc: reagent-physical-desc-oily
-  flavor: oily
-  flavorMinimum: 0.05
-  color: "#ffff77"
-  meltingPoint: -6.0 #Taken from OilOlive
-  boilingPoint: 299.0
-  recognizable: true
-  metabolisms:
-    Food:
-      effects:
-      - !type:SatiateHunger
-        conditions:
-        - !type:ReagentThreshold
-          reagent: Nutriment
-          min: 0.1
-        factor: 1
-
-- type: reagent
-  id: Honey
-  name: reagent-name-honey
-  group: Foods
-  desc: reagent-desc-honey
-  physicalDesc: reagent-physical-desc-gloopy
-  flavor: honey
-  flavorMinimum: 0.05
-  color: "#E79A3F"
-  viscosity: 0.5
-  recognizable: true
-  metabolisms:
-    Food:
-      effects:
-      - !type:SatiateHunger
-        conditions:
-        - !type:ReagentThreshold
-          reagent: Nutriment
-          min: 0.1
-        factor: 1
-  footstepSound:
-    collection: FootstepSticky
-    params:
-      volume: 6
-
 - type: entity
   parent: [ReagentPacketBase, ItemHeftyBase]
   id: ReagentContainerHoney
-  name: honey container
-  description: A big container of honey. Great for sweeting your day!
+  name: honey bottle
+  description: A big squeeze bottle of honey. Great for sweetening up your day!
   components:
   - type: Sprite
     sprite: _NF/Objects/Consumable/Food/ingredients.rsi
@@ -264,10 +217,10 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 100
+        maxVol: 30
         reagents:
         - ReagentId: Honey
-          Quantity: 100
+          Quantity: 30
   - type: Drink
     solution: food
     useSound:
