--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/meals.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/meals.yml
@@ -71,6 +71,8 @@
   name: spooky
   id: MobCatSpooky
   parent: MobCatCrispy
+  description: A grave mistake.
+  suffix: Admeme # only way to get it at the moment
   components:
   - type: FriedTrait
     crispinessLevelSet: Spectral
@@ -79,7 +81,7 @@
   name: dragon omelette
   parent: FoodMealBase
   id: FoodMealDragonOmelette
-  description:
+  description: The mother of all omelettes.
   components:
   - type: FlavorProfile
     flavors:
@@ -108,7 +110,7 @@
 - type: entity
   name: avocado toast
   parent: FoodBreadSliceBase
-  id: FoodMealAvocadoToast
+  id: FoodBreadAvocadoToast
   description: It was this or home ownership.
   components:
   - type: FlavorProfile
@@ -347,229 +349,3 @@
   - type: Tag
     tags:
     - Fruit
-
-- type: entity
-  name: pear muffin
-  parent: FoodMealBase
-  id: FoodBakedMuffinPear
-  description: I won't tell if you just try to pick out the chocolate.
-  components:
-  - type: FlavorProfile
-    flavors:
-      - chocolate
-      - muffin
-      - pear
-  - type: Sprite
-    sprite: _NF/Objects/Consumable/Food/Baked/bread.rsi
-    state: pearmuffin
-    scale: .75, .75
-  - type: SolutionContainerManager
-    solutions:
-      food:
-        maxVol: 15
-        reagents:
-        - ReagentId: Nutriment
-          Quantity: 6
-        - ReagentId: Vitamin
-          Quantity: 4
-        - ReagentId: Flavorol
-          Quantity: 2
-        - ReagentId: Theobromine
-          Quantity: 1
-  - type: Tag
-    tags:
-    - Fruit
-
-- type: entity
-  name: pear and cheese tart
-  parent: FoodPieBase
-  id: FoodTartPearCheese
-  description: The most sublime pair.
-  components:
-  - type: FlavorProfile
-    flavors:
-      - sweet
-      - cheesy
-      - pear
-  - type: Sprite
-    sprite: _NF/Objects/Consumable/Food/Baked/pie.rsi
-    layers:
-    - state: tin
-    - state: pearandcheese
-  - type: Tag
-    tags:
-    - Fruit
-    - Pie
-
-- type: entity
-  name: honey challah
-  parent: FoodMealBase
-  id: FoodHoneyChallah
-  description: Twisted bread with a dash of poppy seeds
-  components:
-  - type: FlavorProfile
-    flavors:
-      - honey
-      - bread
-  - type: Sprite
-    sprite: _NF/Objects/Consumable/Food/Baked/bread.rsi
-    state: challah
-  - type: SliceableFood
-    count: 4
-    slice: FoodChallahSlice
-  - type: SolutionContainerManager
-    solutions:
-      food:
-        maxVol: 20
-        reagents:
-        - ReagentId: Nutriment
-          Quantity: 8
-        - ReagentId: Vitamin
-          Quantity: 8
-        - ReagentId: Flavorol
-          Quantity: 4
-
-- type: entity
-  name: challah slice
-  parent: ProduceSliceBase
-  id: FoodChallahSlice
-  description: A slice of poppy and honey, oh my!
-  components:
-  - type: FlavorProfile
-    flavors:
-      - honey
-      - bread
-  - type: SolutionContainerManager
-    solutions:
-      food:
-        maxVol: 5
-        reagents:
-        - ReagentId: Nutriment
-          Quantity: 2
-        - ReagentId: Vitamin
-          Quantity: 2
-        - ReagentId: Flavorol
-          Quantity: 1
-  - type: Sprite
-    sprite: _NF/Objects/Consumable/Food/Baked/bread.rsi
-    state: challahslice
-  - type: Extractable
-    grindableSolutionName: food
-    juiceSolution:
-      reagents:
-        - ReagentId: Nutriment
-          Quantity: 3
-        - ReagentId: Vitamin
-          Quantity: 2
-        - ReagentId: Flavorol
-          Quantity: 1
-  - type: Tag
-    tags:
-      - Slice
-
-- type: entity
-  name: honey glazed ham
-  parent: FoodMealBase
-  id: FoodGlazedHam
-  description: Ham that is covered in honey with a dash of salt
-  components:
-  - type: FlavorProfile
-    flavors:
-      - honey
-      - salty
-  - type: Sprite
-    sprite: _NF/Objects/Consumable/Food/meat.rsi
-    state: honeyglazedham
-  - type: SliceableFood
-    count: 4
-    slice: FoodGlazedHamSlice
-  - type: SolutionContainerManager
-    solutions:
-      food:
-        maxVol: 30
-        reagents:
-        - ReagentId: Nutriment
-          Quantity: 12
-        - ReagentId: Vitamin
-          Quantity: 8
-        - ReagentId: Flavorol
-          Quantity: 4
-  - type: Tag
-    tags:
-    - Meat
-
-- type: entity
-  name: honey glazed slice
-  parent: ProduceSliceBase
-  id: FoodGlazedHamSlice
-  description: A slice of wonderful ham, glazed in delicious honey
-  components:
-  - type: FlavorProfile
-    flavors:
-      - honey
-      - salty
-  - type: SolutionContainerManager
-    solutions:
-      food:
-        maxVol: 5
-        reagents:
-        - ReagentId: Nutriment
-          Quantity: 3
-        - ReagentId: Vitamin
-          Quantity: 2
-        - ReagentId: Flavorol
-          Quantity: 1
-  - type: Sprite
-    sprite: _NF/Objects/Consumable/Food/meat.rsi
-    layers:
-      - state: honeyglazedhamslice
-        map: [ "Slice" ]
-  - type: RandomSprite
-    available:
-      - Slice:
-          honeyglazedhamslice: ""
-          normalhamslice: ""
-  - type: Extractable
-    grindableSolutionName: food
-    juiceSolution:
-      reagents:
-        - ReagentId: Nutriment
-          Quantity: 3
-        - ReagentId: Vitamin
-          Quantity: 2
-        - ReagentId: Flavorol
-          Quantity: 1
-  - type: Tag
-    tags:
-      - Slice
-      - Meat
-
-- type: entity
-  name: apple honey dutch baby
-  parent: FoodPieBase
-  id: FoodAppleHoneyDutchBaby
-  description: Apple and honey baked together with love
-  components:
-  - type: FlavorProfile
-    flavors:
-      - honey
-      - sweet
-  - type: Sprite
-    sprite: _NF/Objects/Consumable/Food/Baked/pie.rsi
-    layers:
-    - state: tin
-    - state: pearandcheese
-  - type: SolutionContainerManager
-    solutions:
-      food:
-        maxVol: 15
-        reagents:
-        - ReagentId: Nutriment
-          Quantity: 6
-        - ReagentId: Vitamin
-          Quantity: 4
-        - ReagentId: Flavorol
-          Quantity: 3
-  - type: Tag
-    tags:
-    - Pie
