printable seed data, jar of bees that releases bz

--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/animals.yml
@@ -56,3 +56,18 @@
     size: Normal
   - type: Clothing
     sprite: _NF/Mobs/Animals/rosy_mothroach.rsi
+
+- type: entity
+  name: bee
+  suffix: Angry, Timed
+  parent: [ MobAngryBee ]
+  id: MobAngryBeeTimed
+  components:
+  - type: MeleeWeapon
+    angle: 0
+    animation: WeaponArcBite
+    damage:
+      types:
+        Piercing: 0.5
+  - type: TimedDespawn
+    lifetime: 15
