--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/produce.yml
@@ -2,7 +2,7 @@
   name: pear
   parent: FoodProduceBase
   id: FoodPear
-  description: it's peary good.
+  description: It's peary good.
   components:
   - type: FlavorProfile
     flavors:
@@ -266,7 +266,7 @@
   name: honeycomb
   parent: FoodProduceBase
   id: FoodHoneyComb
-  description: Crispy container of honey
+  description: Crispy container of honey.
   components:
   - type: FlavorProfile
     flavors:
