--- a/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
@@ -269,7 +269,7 @@
 - type: microwaveMealRecipe
   id: RecipeHoneyChallah
   name: honey challah recipe
-  result: FoodHoneyChallah
+  result: FoodBreadChallah
   time: 15
   solids:
     FoodDoughRope: 3
@@ -282,7 +282,7 @@
 - type: microwaveMealRecipe
   id: RecipeGlazedHam
   name: honey glazed ham recipe
-  result: FoodGlazedHam
+  result: FoodMeatGlazedHam
   time: 15
   solids:
     FoodMeat: 2
