--- a/Resources/Prototypes/_NF/Entities/World/Debris/dungeons.yml
+++ b/Resources/Prototypes/_NF/Entities/World/Debris/dungeons.yml
@@ -1,8 +1,9 @@
 ﻿- type: entity
   id: NFBaseAsteroidDungeons
+  parent: NFBaseDebris
   abstract: true
   components:
-  - type: OwnedDebris
+  - type: MapGrid
   - type: GridSpawn
     onInit: true
     groups:
