--- a/Resources/Prototypes/_NF/Events/events.yml
+++ b/Resources/Prototypes/_NF/Events/events.yml
@@ -525,22 +525,22 @@
 #       - type: TraitorRole
 #         prototype: TraitorSleeper
 
-#- type: entity
-#  id: MassHallucinations
-#  parent: BaseGameRule
-#  components:
-#  - type: StationEvent
-#    earliestStart: 15 # Frontier
-#    weight: 7
-#    duration: 150
-#    maxDuration: 300
-#    reoccurrenceDelay: 30
-#  - type: MassHallucinationsRule
-#    minTimeBetweenIncidents: 0.1
-#    maxTimeBetweenIncidents: 300
-#    maxSoundDistance: 7
-#    sounds:
-#      collection: Paracusia
+- type: entity
+  id: MassHallucinations
+  parent: BaseGameRule
+  components:
+  - type: StationEvent
+    earliestStart: 15 # Frontier
+    weight: 7
+    duration: 150
+    maxDuration: 300
+    reoccurrenceDelay: 30
+  - type: MassHallucinationsRule
+    minTimeBetweenIncidents: 0.1
+    maxTimeBetweenIncidents: 300
+    maxSoundDistance: 7
+    sounds:
+      collection: Paracusia
 
 - type: entity
   parent: BaseGameRule
