LVHI Posters (New)

--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/posters.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/posters.yml
@@ -98,6 +98,9 @@
       - NFPosterContrabandFsbLogo # Frontier
       - NFPosterContrabandFsbStasis # Frontier
       - NFPosterContrabandFsbApothecary # Frontier
+      - NFPosterContrabandLvhiMountains # Frontier
+      - NFPosterContrabandLvhiPlanetCore # Frontier
+      - NFPosterContrabandLvhiLogo # Frontier
     chance: 1
 
 - type: entity
