--- a/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
@@ -1,3 +1,4 @@
+# Legit posters
 - type: entity
   parent: PosterBase
   id: NFPosterLegitMagnusWatching
@@ -8,6 +9,7 @@
     sprite: _NF/Structures/Wallmounts/posters.rsi
     state: nf_poster1_legit
 
+# Contraband posters
 - type: entity
   parent: PosterBase
   id: NFPosterContrabandLvhiStation
@@ -87,3 +89,36 @@
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
     state: nf_poster8_contraband
+
+- type: entity
+  parent: PosterBase
+  id: NFPosterContrabandLvhiMountains
+  name: "LVHI Tetotum Station"
+  description: |-
+   This poster depicts a planetary crust with a mountain range and an upper layer of magma. The advertising slogan reads: "Langstad-Voigt Heavy Industries. Mining the Skies, Building New Horizons."
+  components:
+  - type: Sprite
+    sprite: _NF/Structures/Wallmounts/posters.rsi
+    state: nf_poster9_contraband
+
+- type: entity
+  parent: PosterBase
+  id: NFPosterContrabandLvhiPlanetCore
+  name: "LVHI Deep Core Extraction"
+  description: "Poster about Deep Core Resource Extraction™ techniques employed by Langstad-Voigt Heavy Industries."
+  components:
+  - type: Sprite
+    sprite: _NF/Structures/Wallmounts/posters.rsi
+    state: nf_poster10_contraband
+
+- type: entity
+  parent: PosterBase
+  id: NFPosterContrabandLvhiLogo
+  name: "LVHI Logo"
+  description: |-
+    Poster with Langstad-Voigt Heavy Industries logo. Ad slogan beneath it reads: "Beyond the Stars, Within Your Grasp."
+  components:
+  - type: Sprite
+    sprite: _NF/Structures/Wallmounts/posters.rsi
+    state: nf_poster11_contraband
+    
