--- a/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
@@ -33,7 +33,7 @@
 - type: entity
   parent: PosterBase
   id: NFPosterContrabandLvhiSpace
-  name: "LVHI Mining"
+  name: "LVHI Exploration"
   description: "This poster depicts a mineral-rich planet orbited by a moon, with both celestial bodies brightly illuminated by a blue star. The text promotes the use of Langstad-Voigt Heavy Industries shuttles for deep space exploration."
   components:
   - type: Sprite
@@ -93,7 +93,7 @@
 - type: entity
   parent: PosterBase
   id: NFPosterContrabandLvhiMountains
-  name: "LVHI Tetotum Station"
+  name: "LVHI Mining"
   description: |-
    This poster depicts a planetary crust with a mountain range and an upper layer of magma. The advertising slogan reads: "Langstad-Voigt Heavy Industries. Mining the Skies, Building New Horizons."
   components:
